--- a/index.html
+++ b/index.html
@@ -8,70 +8,70 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="hero">
         <div class="header">
             <div class="header-logo">Header Logo</div>
-                <ul clss="header-links">
-                    <li><a href="#">Header Link 1</a></li>
-                    <li><a href="#">Header Link 2</a></li>
-                    <li><a href="#">Header Link 3</a></li>
-                </ul>
+            <ul class="header-links">
+                <li><a href="#">Header Link 1</a></li>
+                <li><a href="#">Header Link 2</a></li>
+                <li><a href="#">Header Link 3</a></li>
+            </ul>
         </div>
-        <div class="hero-image">
+        <div class="hero-content">
             <div class="hero-text">
-                <h1>This website is awesome</h1>
-                <p>Some may even go as far as to say that this is THE WEBSITE SUPREME.</p>
+                <div class="big-text">This website is awesome</div>
+                <div class="smaller-text">Some may even go as far as to say that this is THE WEBSITE SUPREME.</div>
                 <button class="hero-button">Enlist</button>
-                <img src="" alt="this is a placeholder for an image">
             </div>
+            <img class="hero-image" src="#" alt="this is a placeholder for an image">
         </div>
-        <div class="main-content">
-            <div class="body1">
-                <div class="body-header">Some Random Information.</div>
-                <div class="cards">
-                    <div class="card">
-                        <img src="" alt="blank">
-                        <div class="subtext">this is some subtext...</div>
-                    </div>
-                    <div class="card">
-                        <img src="" alt="blank">
-                        <div class="subtext">this is some subtext...</div>
-                    </div>
-                    <div class="card">
-                        <img src="" alt="blank">
-                        <div class="subtext">this is some subtext...</div>
-                    </div>
-                    <div class="card">
-                        <img src="" alt="blank">
-                        <div class="subtext">this is some subtext...</div>
-                    </div>
+    </div>
+    <div class="main-content">
+        <div class="body1">
+            <div class="body-header">Some Random Information.</div>
+            <div class="cards">
+                <div class="card">
+                    <img src="" alt="blank">
+                    <div class="subtext">this is some subtext...</div>
                 </div>
-            </div>
-            <div class="body2">
-                <div class="quote">
-                    <blockquote>
-                        "Bleach is mostly water and we're mostly water... Therefore, we are bleach."
-                        <footer>
-                            <cite class="quoted">
-                                Nathan Explosion
-                            </cite>
-                        </footer>
-                    </blockquote>
+                <div class="card">
+                    <img src="" alt="blank">
+                    <div class="subtext">this is some subtext...</div>
                 </div>
-            </div>
-            <div class="body3">
-                <div class="box">
-                    <div class="box-text">
-                        <div class="box-text1">This is for all the beans.</div>
-                        <div class="box-text2">I cannot stress enough the seriousness of this entire situation.</div>
-                    </div>
-                    <button class="box-button">Enlist</button>
+                <div class="card">
+                    <img src="" alt="blank">
+                    <div class="subtext">this is some subtext...</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="blank">
+                    <div class="subtext">this is some subtext...</div>
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <div class="footer-text">Copyright Josh Merhar 2023</div>
+        <div class="body2">
+            <div class="quote">
+                <blockquote>
+                    "Bleach is mostly water and we're mostly water... Therefore, we are bleach."
+                    <footer>
+                        <cite class="quoted">
+                            Nathan Explosion
+                        </cite>
+                    </footer>
+                </blockquote>
+            </div>
         </div>
+        <div class="body3">
+            <div class="box">
+                <div class="box-text">
+                    <div class="box-text1">This is for all the beans.</div>
+                    <div class="box-text2">I cannot stress enough the seriousness of this entire situation.</div>
+                </div>
+                <button class="box-button">Enlist</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-text">Copyright Josh Merhar 2023</div>
     </div>
 </body>
 </html>
