Add style to first body section.

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             <div class="body-header">Some Random Information.</div>
             <div class="cards">
                 <div class="card">
-                    <img src="" alt="blank">
+                    <img class="card-pic" src="#" alt="blank">
                     <div class="subtext">this is some subtext...</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="blank">
+                    <img class="card-pic" src="#" alt="blank">
                     <div class="subtext">this is some subtext...</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="blank">
+                    <img class="card-pic" src="#" alt="blank">
                     <div class="subtext">this is some subtext...</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="blank">
+                    <img class="card-pic" src="#" alt="blank">
                     <div class="subtext">this is some subtext...</div>
                 </div>
             </div>
