Add quote section styling

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div class="body2">
             <div class="quote">
                 <blockquote>
-                    "Bleach is mostly water and we're mostly water... Therefore, we are bleach."
+                    "I REPEAT MYSELF WHEN UNDER STRESS I REPEAT MYSELF WHEN UNDER STRESS I REPEAT MYSELF WHEN UNDER STRESS I REPEAT MYSELF WHEN UNDER STRESS I REPEAT."
                     <footer>
                         <cite class="quoted">
-                            Nathan Explosion
+                            -Adrian Belew
                         </cite>
                     </footer>
                 </blockquote>
