--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="footer">
-        <div class="footer-text">Copyright Josh Merhar 2023</div>
+        <div class="footer-text">Copyright &copy; Josh Merhar 2023</div>
     </div>
 </body>
 </html>
