Add images and finalize index content and styling

--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
         <div class="header">
             <div class="header-logo">Header Logo</div>
             <ul class="header-links">
-                <li><a href="#">Header Link 1</a></li>
-                <li><a href="#">Header Link 2</a></li>
-                <li><a href="#">Header Link 3</a></li>
+                <li><a href="#">About Pigs</a></li>
+                <li><a href="#">Pigtures</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
         <div class="hero-content">
             <div class="hero-text">
-                <div class="big-text">This website is awesome</div>
+                <div class="big-text">This website is awesome.</div>
                 <div class="smaller-text">Some may even go as far as to say that this is THE WEBSITE SUPREME.</div>
                 <button class="hero-button">Enlist</button>
             </div>
-            <img class="hero-image" src="#" alt="this is a placeholder for an image">
+            <img class="hero-image" src="./images/pexels-brett-sayles-5092816.jpg" alt="this is a placeholder for an image">
         </div>
     </div>
     <div class="main-content">
         <div class="body1">
-            <div class="body-header">Some Random Information.</div>
+            <div class="body-header">Everything you need to know about Piglets. At your fingertips.</div>
             <div class="cards">
                 <div class="card">
-                    <img class="card-pic" src="#" alt="blank">
-                    <div class="subtext">this is some subtext...</div>
+                    <img class="card-pic" src="./images/pexels-brett-sayles-7854937.jpg" alt="blank">
+                    <div class="subtext">This here is a pretty lil pig dude.</div>
                 </div>
                 <div class="card">
-                    <img class="card-pic" src="#" alt="blank">
-                    <div class="subtext">this is some subtext...</div>
+                    <img class="card-pic" src="./images/pexels-anthony-)-133468.jpg" alt="blank">
+                    <div class="subtext">This here is a small group of piglets, known as a "pog."</div>
                 </div>
                 <div class="card">
-                    <img class="card-pic" src="#" alt="blank">
-                    <div class="subtext">this is some subtext...</div>
+                    <img class="card-pic" src="./images/pexels-rutpratheep-nilpechr-6596764.jpg" alt="blank">
+                    <div class="subtext">This isn't quite a piglet.</div>
                 </div>
                 <div class="card">
-                    <img class="card-pic" src="#" alt="blank">
-                    <div class="subtext">this is some subtext...</div>
+                    <img class="card-pic" src="./images/pexels-brett-sayles-4813937.jpg" alt="blank">
+                    <div class="subtext">I mean look at this! Are you kidding me!?</div>
                 </div>
             </div>
         </div>
